--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -7,7 +7,7 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h1>Hi I am Maliha</h1>
+  <h1>There is no end in exploring. You are here in your journey and destined to go somewhere from here.</h1>
 </header>
 
 <footer>
