--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -1,15 +1,11 @@
 ---
 title: Intro
-cover-photo: assets/images/banner.jpg
-cover-photo-alt: example cover photo
+cover-photo: assets/images/intro_banner.jpg
+cover-photo-alt: Melbourne cover photo
 auto-header: none
 icon: fa-comment
 order: 1
 ---
 <header>
-  <h1>There is no end in exploring. You are here in your journey and destined to go somewhere from here.</h1>
+  <small>PC:<span>Photo by <a href="https://unsplash.com/@rhindaxu?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Linda Xu</a> on <a href="https://unsplash.com/s/photos/explore-melbourne?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></small>
 </header>
-
-<footer>
-  <a href="#portfolio" class="button scrolly">Maliha</a>
-</footer>
