--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -4,6 +4,6 @@ icon: fa-user
 order: 3
 ---
 
-<a href="#" class="image featured"><img src="assets/images/pic08.jpg" alt="" /></a>
+<a href="#" class="image featured"><img src="assets/images/about_me_banner.jpg" alt="About me banner" /></a>
 
 <p>This is Maliha Rudiana, an Industrial Production Engineer by day, Data Analytics explorer by night.</p>
