--- a/_sections/intro.html
+++ b/_sections/intro.html
@@ -7,5 +7,5 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <small>PC:<span>Photo by <a href="https://unsplash.com/@rhindaxu?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Linda Xu</a> on <a href="https://unsplash.com/s/photos/explore-melbourne?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></small>
+ <!-- to be added -->
 </header>
