--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -4,4 +4,4 @@ icon: fa-th
 order: 2
 ---
 
-<p>My Portfolio</p>
+<p>I am an aspirant and stargazer. Constantly looking up to the industry trends and adavancement of technology to hoist me up to them and keep up.</p>
